提升API的彈性
